19 February 2008: Wouter
	- applied patch to unbound-host man page from Jan-Piet Mens.

18 February 2008: Wouter
	- patch to unbound-host from Jan-Piet Mens.
	- unbound host prints errors if fails to configure context.
	- fixup perf to resend faster, so that long waiting requests do
	  not hold up the queue, they become lost packets or SERVFAILs,
	  or can be sent a little while later (i.e. processing time may 
	  take long, but throughput has to be high).
	- fixup iterator operating in no cache conditions (RD flag unset
	  after a CNAME).
	- streamlined code for RD flag setting.
	- profiled code and changed dname compares to be faster. 
	  The speedup is about +3% to +8% (depending on the test).
	- minievent tests for eintr and eagain.

15 February 2008: Wouter
	- added FreeBSD rc.d script to contrib.
	- --prefix option for configure also changes directory: pidfile:
	  and chroot: defaults in config file.
	- added cache speed test, for cache size OK and cache too small.

14 February 2008: Wouter
	- start without a config file (will complain, but start with
	  defaults).
	- perf test program works.

13 February 2008: Wouter
	- 0.9 released.
	- 1.0 development. Printout ldns version on unbound -h.
	- start of perf tool.
	- bugfix to read empty lines from /etc/hosts.

12 February 2008: Wouter
	- fixup problem with configure calling itself if ldns-src tarball
	  is not present.

11 February 2008: Wouter
	- changed library to use ub_ instead of ub_val_ as prefix.
	- statistics output text nice.
	- etc/hosts handling.
	- library function to put logging to a stream.
	- set any option interface.

8 February 2008: Wouter
	- test program for multiple queries over a TCP channel.
	- tpkg test for stream tcp queries.
	- unbound replies to multiple TCP queries on a TCP channel.
	- fixup misclassification of root referral with NS in answer
	  when validating a nonrec query.
	- tag 0.9
	- layout of manpages, spelling fix in header, manpages process by